--- a/web_Technolog Assignment/survey_form.html
+++ b/web_Technolog Assignment/survey_form.html
@@ -31,7 +31,8 @@
          <tr>
            <td> <label for="country">Country:</label> </td>
              <td><select id="country" required>
-                <option value="usa">USA</option>
+                <option value="Select">Select</option>
+                <option value="India">India</option>
                 <option value="canada">Canada</option>
                 <option value="uk">UK</option>
                 <!-- Add more options as needed -->
