--- a/web_Technolog Assignment/array.html
+++ b/web_Technolog Assignment/array.html
@@ -7,12 +7,30 @@
 </head>
 <body>
    <script>
-    const myArray = [5, 2, 9, 1, 5, 6];
-myArray.sort(function(a, b) {
-  return b - a;
-});
+    function descendingBubbleSort(arr) {
+    const n = arr.length;
+    let swapped;
+    do {
+        swapped = false;
+        for (let i = 0; i < n - 1; i++) {
+            if (arr[i] < arr[i + 1]) {
+                // Swap arr[i] and arr[i+1]
+                const temp = arr[i];
+                arr[i] = arr[i + 1];
+                arr[i + 1] = temp;
+                swapped = true;
+            }
+        }
+    } while (swapped);
 
-console.log(myArray); 
+    return arr;
+}
+
+const inputArray = [5, 2, 9, 1, 5, 6];
+const sortedArray = descendingBubbleSort(inputArray);
+
+console.log("Sorted Array in Descending Order: " + sortedArray);
+
 
    </script> 
 </body>
